Ajout choix langues

--- a/fr/index.html
+++ b/fr/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
+    <a href="/en/">🇬🇧</a>
     <h1>Accueil site </h1>
     <a href="autre.html">Autre page</a>
 </body>
