--- a/en/index.html
+++ b/en/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
+    <a href="/fr/">🇫🇷</a>
     <h1>Homepage</h1>
     <a href="autre.html">Other page</a>
 </body>
