--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <a href="/fr/">🇫🇷</a>
+    <a href="/fr/index.html" onclick="document.cookie = 
+    `nf_lang=fr; path=/ ; SameSite=Strict`">>🇫🇷</a>
     <h1>Homepage</h1>
     <a href="autre.html">Other page</a>
 </body>
