--- a/fr/index.html
+++ b/fr/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="/en/index.html" onclick="document.cookie = 
-    `nf_lang=en; path=/ ; SameSite=Strict`">>🇬🇧</a>
+    `nf_lang=en; path=/ ; SameSite=Strict`">🇬🇧</a>
     <h1>Accueil site </h1>
     <a href="autre.html">Autre page</a>
 </body>
