--- a/en/index.html
+++ b/en/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="/fr/index.html" onclick="document.cookie = 
-    `nf_lang=fr; path=/ ; SameSite=Strict`">>🇫🇷</a>
+    `nf_lang=fr; path=/ ; SameSite=Strict`">🇫🇷</a>
     <h1>Homepage</h1>
     <a href="autre.html">Other page</a>
 </body>
