--- a/en/autre.html
+++ b/en/autre.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
+    <a class="flag__fr" href="/fr/index.html" onclick="document.cookie = 
+            `nf_lang=en; path=/ ; SameSite=Strict`">🇫🇷 | </a>
+    <a class="flag__en" href="/en/index.html" onclick="document.cookie = 
+            `nf_lang=en; path=/ ; SameSite=Strict`">🇬🇧</a>
     <h1>Other page</h1>
     <a href="index.html">Return Home</a>
 </body>
