--- a/fr/index.html
+++ b/fr/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <a href="/en/index.html" onclick="document.cookie = 
-    `nf_lang=en; path=/ ; SameSite=Strict`">🇬🇧</a>
+    <a class = "flag__fr" href="/fr/index.html" onclick="document.cookie = 
+    `nf_lang=en; path=/ ; SameSite=Strict`">🇫🇷 | </a>
+    <a class="flag__en" href="/en/index.html" onclick="document.cookie = 
+        `nf_lang=en; path=/ ; SameSite=Strict`">🇬🇧</a>
     <h1>Accueil site </h1>
     <a href="autre.html">Autre page</a>
 </body>
