--- a/fr/index.html
+++ b/fr/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <a class = "flag__fr" href="/fr/index.html" onclick="document.cookie = 
+    
+    <a class = flag__fr href="/fr/index.html" onclick="document.cookie = 
     `nf_lang=en; path=/ ; SameSite=Strict`">🇫🇷 | </a>
     <a class="flag__en" href="/en/index.html" onclick="document.cookie = 
         `nf_lang=en; path=/ ; SameSite=Strict`">🇬🇧</a>
     <h1>Accueil site </h1>
-    <a href="autre.html">Autre page</a>
+    <a class = header__link href="autre.html">Autre page</a>
 </body>
 </html>
