--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
     <li><a href="/fr">Site en Français</a></li>
-    <li><a href="/en">Site in English</a></li>
+    <li><a href="/en">Website in English</a></li>
     </ul>
 </body>
 </html>
