--- a/en/autre.html
+++ b/en/autre.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <a class="flag__fr" href="/fr/index.html" onclick="document.cookie = 
+    <a class="flag__fr" href="/fr/autre.html" onclick="document.cookie = 
             `nf_lang=en; path=/ ; SameSite=Strict`">🇫🇷 | </a>
-    <a class="flag__en" href="/en/index.html" onclick="document.cookie = 
+    <a class="flag__en" href="/en/autre.html" onclick="document.cookie = 
             `nf_lang=en; path=/ ; SameSite=Strict`">🇬🇧</a>
     <h1>Other page</h1>
-    <a href="index.html">Return Home</a>
+    <a class = header__link href="index.html">Return Home</a>
 </body>
 </html>
