--- a/en/index.html
+++ b/en/index.html
@@ -12,6 +12,6 @@
     <a class="flag__en" href="/en/index.html" onclick="document.cookie = 
             `nf_lang=en; path=/ ; SameSite=Strict`">🇬🇧</a>
     <h1>Homepage</h1>
-    <a href="autre.html">Other page</a>
+    <a class = header__link href="autre.html">Other page</a>
 </body>
 </html>
